capture/default/personal/us-east-1/20250708/212018/vpcs/devops-private-vpc/vpc_route_tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0eada6e53becb9177",
                    "RouteTableId": "rtb-0a01a0b09d8ff4547",
                    "SubnetId": "subnet-0ebc71f9acbeba83c",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0a01a0b09d8ff4547",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "Origin": "CreateRoute",
                    "State": "active",
                    "VpcPeeringConnectionId": "pcx-0b2f7050573bcea16"
                },
                {
                    "DestinationCidrBlock": "10.1.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "Origin": "CreateRoute",
                    "State": "active",
                    "VpcPeeringConnectionId": "pcx-0b2f7050573bcea16"
                },
                {
                    "DestinationPrefixListId": "pl-63a5400a",
                    "GatewayId": "vpce-0d3fa9c6ea83d144d",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "DevOps",
                    "Value": "true"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "PrivateRouteTable"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "network-mapping"
                },
                {
                    "Key": "Name",
                    "Value": "DevOps-PrivateRouteTable"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:***:stack/network-mapping/abc89460-5c7a-11f0-9326-0affc332652d"
                }
            ],
            "VpcId": "vpc-0dd98b0cb5d3ded56",
            "OwnerId": "***"
        },
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0847c3bd9eaf8fbb9",
                    "RouteTableId": "rtb-05c18e151ae6ed214",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-05c18e151ae6ed214",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.1.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0dd98b0cb5d3ded56",
            "OwnerId": "***"
        }
    ]
}
